# chatroom

./: README.md
client/: .anjuta_sym_db.db  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
client/.anjuta/session/: anjuta.session  dock-layout.xml
client/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
client/po/: Makefile  Makefile.in  missing
client/src/: Makefile  Makefile.am  Makefile.in  im_chat.ui  im_chat.ui~  im_client  im_client.ui  im_login.ui  main.c  main.c~
client/src/.deps/: main.Po
server/: .anjuta_sym_db.db  server.py
server/.anjuta/session/: anjuta.session  dock-layout.xml
